[package]
name = "dice_tray_cli"
description = "A CLI dice roller, that uses persistant structs with internal RNG to modle physical dice. Work in progress."
version = "0.0.1"
edition = "2024"


[dependencies]
rust_dice = {path = "../rust_dice"}
cli-table = "*"
regex = "*"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
