[package]
name = "dice_tray_cli"
description = "A CLI dice roller, that uses persistant structs with internal RNG to simulate physical dice. Work in progress."
version = "0.1.0"
edition = "2024"


[dependencies]
rust_dice = {path = "../rust_dice"}
cli-table = "*"
regex = "*"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
indexmap = "2.12.1"

[[bin]]
name = "dicetray"
path = "src/main.rs"

