[package]
name = "roll_room"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.14", features = ["csr"] }
leptos-leaflet = "*"
reactive_stores = "*"
rand = "*"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "console",
    "DataTransfer",
    "DragEvent",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }